feat: make databases paginated
